# survey2ddi

./: .env.example  .gitignore  AI_DISCLOSURE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/basic/: 101.csv  101.xml  analysis_example.ipynb  responses.json
kobo2ddi/: __init__.py  __main__.py  cli.py  client.py  data.py  ddi_xml.py  transform.py
limesurvey2ddi/: __init__.py  __main__.py  cli.py  client.py  lstsv.py  transform.py
scripts/: check-registry-drift.sh  sync-registry.sh
survey2ddi_core/: __init__.py  data.py  ddi.py  ddi_xml.py  notes.py  types.py  xlsform.py
survey2ddi_core/_generated/: type_mappings.py
tests/: conftest.py  test_client.py  test_data.py  test_ddi_utils.py  test_ddi_xml.py  test_file_transform.py  test_kobo_cli.py  test_kobo_transform.py  test_limesurvey_cli.py  test_limesurvey_client.py  test_limesurvey_transform.py  test_lstsv.py  test_notes.py  test_transform.py
tests/_helpers/: __init__.py  xsd.py
tests/integration/: conftest.py  docker-compose.validate.yml  test_conversion_equivalence.py  test_schematron_validation.py
tests/schemas/: README.md
