[project]
name = "survey2ddi"
version = "0.1.0"
description = "Transform survey data (KoboToolbox, LimeSurvey) into DDI-adjacent formats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx",
    "openpyxl",
    "python-dotenv",
    "xlrd>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kobo2ddi", "limesurvey2ddi"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
kobo2ddi = "kobo2ddi.cli:main"
limesurvey2ddi = "limesurvey2ddi.cli:main"
