[project]
name = "survey2ddi"
version = "0.3.0"
description = "Transform survey data (KoboToolbox, LimeSurvey) into DDI-adjacent formats"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "CorrelAid" }]
keywords = ["ddi", "kobotoolbox", "limesurvey", "survey", "xlsform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx",
    "openpyxl",
    "python-dotenv",
    "xlrd>=2.0.2",
]

[project.urls]
Repository = "https://github.com/CorrelAid/survey2ddi"
Issues = "https://github.com/CorrelAid/survey2ddi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["survey2ddi_core", "kobo2ddi", "limesurvey2ddi"]

[dependency-groups]
dev = [
    "pandas",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
notebook = [
    "pandas",
    "jupyter",
    "lxml",
    "matplotlib>=3.10.9",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires docker + qwacback/schematron-worker images (opt-in)",
]
addopts = "-m 'not integration'"

[project.scripts]
kobo2ddi = "kobo2ddi.cli:main"
limesurvey2ddi = "limesurvey2ddi.cli:main"
